--- a/docs/markdown/guide/i18n.md
+++ b/docs/markdown/guide/i18n.md
@@ -2,33 +2,35 @@
 
 Cosey 组件默认使用中文，如果你希望使用其他语言，你可以参考下面的方案。
 
-## RootConfigProvider
+## 语言配置
 
-Cosey 提供了 [RootConfigProvider](../components/root-config-provider) 组件用于配置国际化。
-
-```vue [App.vue]
-<template>
-  <RootConfigProvider :locale="en">
-    <router-view></router-view>
-  </RootConfigProvider>
-</template>
-
-<script setup lang="ts">
-import { RootConfigProvider } from 'cosey';
-import en from 'cosey/locale/lang/en';
-</script>
-```
-
-## 日期和时间本地化​
-
-我们使用 `Day.js` 库来管理组件的日期和时间。 必须在 Day.js 中设置一个适当的区域，以便使国际化充分发挥作用。 您必须分开导入Day.js的区域设置。
+`launch` 函数配置项 `i18n` 用于配置多语言。
 
 ```ts
-import dayjs from 'dayjs';
-import zhCn from 'dayjs/locale/zh-cn';
+import dayjsZhCn from 'dayjs/locale/zh-cn';
+import coseyZhCn from 'cosey/locale/lang/zh-cn';
+import appZhCn from '@/lang/zh-cn';
 
-dayjs.locale(zhCn);
+launch(app, {
+  i18n: {
+    messages: [
+      {
+        value: 'zh-cn',
+        label: '简体中文',
+        dayjs: dayjsZhCn,
+        cosey: coseyZhCn,
+        app: appZhCn,
+      },
+    ],
+  },
+});
 ```
+
+你至少需要导入三个语言文件：cosey、Dayjs和应用语言文件。
+
+不配置，或者配置不超过1个语言，则不显示页面右上角语言选择下拉菜单。
+
+如果需要配置多个语言，只需往 `i18n.messages` 数组添加即可。
 
 ## 支持的语言列表
 
